test/invalid_confs/invalid_command.lua
--ERROR: invalid command
Listen "8080" {
	hello = 123
}
